# NaSiK

./: .gitignore  .gitmodules  README  SETUP_NASIK  TODO.txt  build_cscope_db.sh  clean_env.sh  clean_env_kvm.sh  compile_simulation.sh  compile_simulation_kvm.sh  configure_env.sh  configure_env_arm.sh  configure_env_c6x.sh  configure_env_kvm.sh  install_env.sh  run_batch_test.sh  run_batch_test_arm.sh  run_batch_test_c6x.sh  tests_list_c6x.txt  tty_term  tty_term_rw
dss_scripts/: ccs_simulate.js  ccs_simulate.sh  compare_kvm.js  extract_results_ccs.sh
hw/: systemc-2.2.0
scripts/: clean_env_kvm.sh  compile_application.sh  compile_simulation_kvm.sh  extract_results_c6x.sh  run_batch_test.sh  run_batch_test_c6x.sh  run_batch_test_c6x_polybench.sh  run_batch_test_kvm.sh  tests_c6x.list  (+1 more)
sw/apes-newlibc/newlib-1.18.0/newlib/libc/sys/dnaos/: Makefile.am  Makefile.in  _exit.c  chown.c  close.c  configure.in  crt0.c  errno.c  execve.c  fork.c  fstat.c  getdents.c  getpid.c  gettod.c  impure.c  ioctl.c  isatty.c  kill.c  link.c  lock.c  lseek.c  nanosleep.c  open.c  read.c  readlink.c  sbrk.c  stat.c  symlink.c  times.c  unlink.c  wait.c  write.c
sw/apes-newlibc/newlib-1.18.0/newlib/libc/sys/dnaos/include/Core/: Core.h  Semaphore.h  Thread.h  Time.h
sw/apes-newlibc/newlib-1.18.0/newlib/libc/sys/dnaos/include/DnaTools/: Config.h  DnaTools.h
sw/apes-newlibc/newlib-1.18.0/newlib/libc/sys/dnaos/include/VirtualFileSystem/: File.h  Operation.h  VirtualFileSystem.h
sw/apes-newlibc/newlib-1.18.0/newlib/libc/sys/dnaos/sys/: _types.h  dirent.h  ioctl.h  lock.h  reent.h  types.h
(+1289 files in other folders)
